# purple-agents-comparison

./: README.md
.github/workflows/: publish-purple-agents.yml
v1_high_performance/: purple_agent.py  pyproject.toml  run.py
v2_medium_performance/: README.md  purple_agent.py  tasks.py
v3_baseline/: Dockerfile  debug_a2a.py  purple_agent.py  run.py  run_a2a.py  simple_test.py  start.sh  test_imports.py
